--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -30,10 +30,13 @@ indent_style = tab
 indent_style = tab
 indent_size = 4
 
-[*.lua]
+[*.java]
 indent_style = tab
 indent_size = 4
 
+[*.lua]
+indent_style = tab
+indent_size = 4
 # Matches the exact files either package.json or .travis.yml
 [{package.json,.travis.yml}]
 indent_style = tab
