--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,6 @@
-set -g default-terminal "xterm"
+set -g default-terminal "xterm-256color"
 
+# make colors inside tmux look the same as outside of tmux
+# see https://github.com/tmux/tmux/issues/696
+# see https://stackoverflow.com/a/41786092
+set-option -ga terminal-overrides ",xterm-256color:Tc"
