feat: I think I found my setup :)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,10 @@
 set -g default-terminal "xterm-256color"
+set-option -g default-shell /bin/zsh
 
 # make colors inside tmux look the same as outside of tmux
 # see https://github.com/tmux/tmux/issues/696
 # see https://stackoverflow.com/a/41786092
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# If this is not set, tmux esc key is delayed by 500 ms
+set -sg escape-time 0
