feat: Added alias for tmux-sessionizer and added mouse back to tmux :)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,3 +8,6 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # If this is not set, tmux esc key is delayed by 500 ms
 set -sg escape-time 0
+
+# No way fuck this, I want my scrollwheel
+setw -g mouse on
