feat: tmux ressurect and moved HOME

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,13 +1,32 @@
-set -g default-terminal "xterm-256color"
 set-option -g default-shell /bin/zsh
+
+
+# No way fuck this, I want my scrollwheel
+setw -g mouse on
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
+
+# Resurrect tmux sessions accross reboots
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
 # make colors inside tmux look the same as outside of tmux
 # see https://github.com/tmux/tmux/issues/696
 # see https://stackoverflow.com/a/41786092
+# MAKE SURE IT's AFTER tmux-sensible, cause theirs isn't so sensible
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# If this is not set, tmux esc key is delayed by 500 ms
-set -sg escape-time 0
-
-# No way fuck this, I want my scrollwheel
-setw -g mouse on
+set -g default-terminal "xterm-256color"
