feat: universal remap for open new session, using O, since s was used for sessions in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,3 +30,10 @@ run '~/.tmux/plugins/tpm/tpm'
 # MAKE SURE IT's AFTER tmux-sensible, cause theirs isn't so sensible
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "xterm-256color"
+
+# Remaps
+# bind-key "f" run-shell "tmux-sessionizer"
+# bind-key "F" run-shell 'tmux-sessionizer "nvim ."'
+
+bind o send-keys -t.- 'tmux-sessionizer' Enter
+bind O send-keys -t.- 'tmux-sessionizer "nvim ."' Enter
