feat: switched O with o so the easier one is to open session with nvim .

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,5 +35,5 @@ set -g default-terminal "xterm-256color"
 # bind-key "f" run-shell "tmux-sessionizer"
 # bind-key "F" run-shell 'tmux-sessionizer "nvim ."'
 
-bind o send-keys -t.- 'tmux-sessionizer' Enter
-bind O send-keys -t.- 'tmux-sessionizer "nvim ."' Enter
+bind O send-keys -t.- 'tmux-sessionizer' Enter
+bind o send-keys -t.- 'tmux-sessionizer "nvim ."' Enter
