feat: don't close tmux if there are existing sessions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,5 @@
 set-option -g default-shell /bin/zsh
 
-
 # No way fuck this, I want my scrollwheel
 setw -g mouse on
 
@@ -31,9 +30,9 @@ run '~/.tmux/plugins/tpm/tpm'
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "xterm-256color"
 
-# Remaps
-# bind-key "f" run-shell "tmux-sessionizer"
-# bind-key "F" run-shell 'tmux-sessionizer "nvim ."'
+# Do not detach from tmux on destroy
+set-option -g detach-on-destroy off
 
+# Remaps
 bind O send-keys -t.- 'tmux-sessionizer' Enter
 bind o send-keys -t.- 'tmux-sessionizer "nvim ."' Enter
