feat: Add tmux window switch using the left and right arrow keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,3 +36,7 @@ set-option -g detach-on-destroy off
 # Remaps
 bind O send-keys -t.- 'tmux-sessionizer' Enter
 bind o send-keys -t.- 'tmux-sessionizer "nvim ."' Enter
+# Bind left arrow to switch to the previous window after prefix
+bind-key Left select-window -p
+# Bind right arrow to switch to the next window after prefix
+bind-key Right select-window -n
