--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
 set-option -g default-shell /bin/zsh
 
+# Set prefix to C-s instead of C-b since C-b is a vim binding for moving back
+set -g prefix C-s
+
 # No way fuck this, I want my scrollwheel
 setw -g mouse on
 
