feat: Back to using so, added a binding for tmux too: <PREFIX>O

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,6 +37,8 @@ set -g default-terminal "xterm-256color"
 set-option -g detach-on-destroy off
 
 # Remaps
+# I need these to be working outside of nvim, so add them here
+bind-key "o" neww "tmux-sessionizer 'nvim .'"
 
 # Bind left arrow to switch to the previous window after prefix
 bind-key Left select-window -p
