--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@ set-option -g default-shell /bin/zsh
 
 # Set prefix to C-s instead of C-b since C-b is a vim binding for moving back
 set -g prefix C-s
+unbind C-b
+bind-key C-s send-prefix
 
 # No way fuck this, I want my scrollwheel
 setw -g mouse on
