feat: Add resize remap for tmux and also re-add vim-obsession for session restoration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,9 @@ setw -g mouse on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -18,12 +21,11 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
-set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
 
 # Resurrect tmux sessions accross reboots
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
@@ -41,8 +43,9 @@ set-option -g detach-on-destroy off
 # Remaps
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
-
 # Bind left arrow to switch to the previous window after prefix
 bind-key Left select-window -p
 # Bind right arrow to switch to the next window after prefix
 bind-key Right select-window -n
+# Maximize And Minimize Panes
+bind-key -r m resize-pane -Z
