feat: Tmux yanky-man

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,14 +5,17 @@ set -g prefix C-s
 unbind C-b
 bind-key C-s send-prefix
 
-# No way fuck this, I want my scrollwheel
-setw -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# No way fuck this, I want my scrollwheel
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g mouse on
+set -g @yank_selection_mouse 'clipboard'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
