fix(tmux): tmux-sessionizer now works correctly on linux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,24 +5,18 @@ set -g prefix C-s
 unbind C-b
 bind-key C-s send-prefix
 
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# No way fuck this, I want my scrollwheel
+# No way fuck this, I want my scrollwheel and to copy with mouse.
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g mouse on
 set -g @yank_selection_mouse 'clipboard'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
+# Theme
 set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
 
 # Resurrect tmux sessions accross reboots
@@ -46,3 +40,7 @@ set-option -g detach-on-destroy off
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 # Maximize And Minimize Panes
 bind-key -r m resize-pane -Z
+
+# TMUX status bar
+set -g status-position top
+set -g @catppuccin_status_modules_right "date_time session"
