feat: Tmux configuration of what is shown in the status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,5 +38,5 @@ bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key -r m resize-pane -Z
 
 # TMUX status bar
-set -g status-position top
-set -g @catppuccin_status_modules_right "date_time session"
+set -g status-position bottom
+set -g @catppuccin_status_modules_right "none"
