--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,6 +1,7 @@
 import = [
   # "~/.config/alacritty/catppuccin-latte.toml"
   # "~/.config/alacritty/catppuccin-frappe.toml"
-  "~/.config/alacritty/catppuccin-macchiato.toml"
+  "~/.config/alacritty/catppuccin-macchiato.toml",
+  "~/.config/alacritty/window.toml"
   # "~/.config/alacritty/catppuccin-mocha.toml"
 ]
