feat: Tmux repeat-time set to 275, gotta experiment on linux, lowered editorconfig wrap

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,8 @@
 set-option -g default-shell /bin/zsh
 
+# Repeat time where we can chain commands... I don't like this outside of mass resizing
+set-option -g repeat-time 275
+
 # Set prefix to C-s instead of C-b since C-b is a vim binding for moving back
 set -g prefix C-s
 unbind C-b
