--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,11 @@
 set-option -g default-shell /bin/zsh
 
-# Repeat time where we can chain commands... I don't like this outside of mass resizing
-set-option -g repeat-time 275
+# Repeat time where we can chain commands... I don't like this outside of mass resizing...
+set-option -g repeat-time 0
+bind-key -r -T prefix       M-Up              resize-pane -U 10
+bind-key -r -T prefix       M-Down            resize-pane -D 10
+bind-key -r -T prefix       M-Left            resize-pane -L 10
+bind-key -r -T prefix       M-Right           resize-pane -R 10
 
 # Set prefix to C-s instead of C-b since C-b is a vim binding for moving back
 set -g prefix C-s
