feat: Alacritty allow for macos spec toml

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -4,5 +4,6 @@ import = [
   "~/.config/alacritty/catppuccin-macchiato.toml",
   "~/.config/alacritty/window.toml",
   "~/.config/alacritty/font.toml",
+  "~/.config/alacritty/macos.toml"
   # "~/.config/alacritty/catppuccin-mocha.toml"
 ]
