--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -4,6 +4,7 @@ import = [
   "~/.config/alacritty/catppuccin-macchiato.toml",
   "~/.config/alacritty/window.toml",
   "~/.config/alacritty/font.toml",
-  "~/.config/alacritty/macos.toml"
+  "~/.config/alacritty/macos.toml",
+  "~/.config/alacritty/macos.yml",
   # "~/.config/alacritty/catppuccin-mocha.toml"
 ]
