--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -5,5 +5,6 @@ import = [
   "~/.config/alacritty/window.toml",
   "~/.config/alacritty/font.toml",
   "~/.config/alacritty/macos.toml",
+  "~/.config/alacritty/macos.yml",
   # "~/.config/alacritty/catppuccin-mocha.toml"
 ]
