--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,8 @@ bind-key C-s send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @resurrect-strategy-nvim 'session'
 
 # No way fuck this, I want my scrollwheel and to copy with mouse.
 set -g @plugin 'tmux-plugins/tmux-yank'
