fix: `kubernete` role was left over

--- a/Home/playbooks/main/roles/apps/tasks/main.yaml
+++ b/Home/playbooks/main/roles/apps/tasks/main.yaml
@@ -6,12 +6,11 @@
   loop:
     - repo: ppa:graphics-drivers/ppa
       state: present
-    - repo: ppa:neovim-ppa/unstable
-      state: present
 
 - name: Ensure apps are installed
   apt:
     name:
+        - curl
         - apt-transport-https
         - chrome-gnome-shell
         - flatpak
