--- a/Home/playbooks/main/roles/apps/tasks/main.yaml
+++ b/Home/playbooks/main/roles/apps/tasks/main.yaml
@@ -16,6 +16,7 @@
         - flatpak
         - gnome-software-plugin-flatpak
         - libssl-dev
+        - vlc
     state: present
     update_cache: true
 
@@ -28,6 +29,9 @@
       - cpu-checker
       - libvirt-clients
       - libvirt-daemon
+      - libgl1-mesa-dri:i386
+      - libgl1:i386
+      - libc6-i386
 
 - name: Check if Virtualization Capabilities exist
   shell: kvm-ok
@@ -37,3 +41,27 @@
 
 - name: Add Flathub
   shell: flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+
+- name: Check if `/usr/share/keyrings/brave-browser-archive-keyring.gpg` exists
+  stat:
+    path: /usr/share/keyrings/brave-browser-archive-keyring.gpg
+  register: brave_keyring
+
+- name: Download Brave Browser Keyring
+  get_url:
+    url: https://brave-browser-apt-release.s3.brave.com/brave-browser-archive-keyring.gpg
+    dest: /usr/share/keyrings/brave-browser-archive-keyring.gpg
+  when: brave_keyring.stat.exists == False
+
+- name: Add Brave Browser Repository
+  apt_repository:
+    repo: deb [signed-by=/usr/share/keyrings/brave-browser-archive-keyring.gpg] https://brave-browser-apt-release.s3.brave.com/ stable main
+    state: present
+  when: brave_keyring.stat.exists == False
+
+- name: Ensure brave-browser is installed
+  apt:
+    name:
+        - brave-browser
+    state: present
+    update_cache: true
