--- a/Home/playbooks/main/roles/apps/tasks/main.yaml
+++ b/Home/playbooks/main/roles/apps/tasks/main.yaml
@@ -14,9 +14,6 @@
       - curl
       - apt-transport-https
       - libssl-dev
-      - libgl1-mesa-dri:i386
-      - libgl1:i386
-      - libc6-i386
     state: present
     update_cache: true
 
@@ -78,5 +75,17 @@
     state: present
     update_cache: true
 
-# 
+# Steam
+
+- name: Ensure support for 32-bit applications is enabled
+  shell: dpkg --add-architecture i386
+
+- name: Ensure Steam Dependencies are installed
+  apt:
+    name:
+      - libgl1-mesa-dri:i386
+      - libgl1:i386
+      - libc6-i386
+      - wget
+    state: present
 
