feat: Tmux vi mode for copy

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,6 +50,9 @@ bind-key "o" neww "tmux-sessionizer 'nvim .'"
 # Maximize And Minimize Panes
 bind-key -r m resize-pane -Z
 
+# Copy Mode
+setw -g mode-keys vi
+
 # TMUX status bar
 set -g status-position bottom
 set -g @catppuccin_status_modules_right "none"
