feat: New `tmux-panelizer` script
It opens a git folder in the current pane

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,6 +47,8 @@ set-option -g detach-on-destroy off
 # Remaps
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
+bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
+
 # Maximize And Minimize Panes
 bind-key -r m resize-pane -Z
 
