refactor: moved openssh to ansible

--- a/Home/playbooks/main/roles/apps/tasks/main.yaml
+++ b/Home/playbooks/main/roles/apps/tasks/main.yaml
@@ -14,6 +14,7 @@
       - curl
       - apt-transport-https
       - libssl-dev
+      - openssh-server
     state: present
     update_cache: true
 
