feat: Add `nfs-common` package to the `apps` role

--- a/Home/playbooks/main/roles/apps/tasks/main.yaml
+++ b/Home/playbooks/main/roles/apps/tasks/main.yaml
@@ -15,6 +15,7 @@
       - apt-transport-https
       - libssl-dev
       - openssh-server
+      - nfs-common
     state: present
     update_cache: true
 
