fix: Deprecation fix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set -g mouse on
 set -g @yank_selection_mouse 'clipboard'
 
 # Theme
-set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
+set -g @catppuccin_flavor 'macchiato' # or frappe, macchiato, mocha
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
