feat: Refactored tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,18 +1,5 @@
 set-option -g default-shell /bin/zsh
 
-# Repeat time where we can chain commands... I don't like this outside of mass resizing...
-# 
-set-option -g repeat-time 0
-bind-key -r -T prefix       C-Up              resize-pane -U 10
-bind-key -r -T prefix       C-Down            resize-pane -D 10
-bind-key -r -T prefix       C-Left            resize-pane -L 10
-bind-key -r -T prefix       C-Right           resize-pane -R 10
-
-bind-key -r -T prefix       M-Up              resize-pane -U
-bind-key -r -T prefix       M-Down            resize-pane -D
-bind-key -r -T prefix       M-Left            resize-pane -L
-bind-key -r -T prefix       M-Right           resize-pane -R
-
 # Set prefix to C-s instead of C-b since C-b is a vim binding for moving back
 set -g prefix C-s
 unbind C-b
@@ -22,11 +9,6 @@ bind-key C-s send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
-
-# No way fuck this, I want my scrollwheel and to copy with mouse.
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g mouse on
-set -g @yank_selection_mouse 'clipboard'
 
 # Theme
 set -g @catppuccin_flavor 'macchiato' # or frappe, macchiato, mocha
@@ -41,20 +23,32 @@ run '~/.tmux/plugins/tpm/tpm'
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "xterm-256color"
 
-# Do not detach from tmux on destroy
-set-option -g detach-on-destroy off
-
 # Remaps
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
+bind-key -r m resize-pane -Z                                        # Maximize And Minimize Panes
+set-option -g repeat-time 0                                         # Repeat time where we can chain commands... I don't like this outside of mass resizing...
+bind-key -r -T prefix       C-Up              resize-pane -U 10
+bind-key -r -T prefix       C-Down            resize-pane -D 10
+bind-key -r -T prefix       C-Left            resize-pane -L 10
+bind-key -r -T prefix       C-Right           resize-pane -R 10
 
-# Maximize And Minimize Panes
-bind-key -r m resize-pane -Z
-
-# Copy Mode
-setw -g mode-keys vi
+bind-key -r -T prefix       M-Up              resize-pane -U
+bind-key -r -T prefix       M-Down            resize-pane -D
+bind-key -r -T prefix       M-Left            resize-pane -L
+bind-key -r -T prefix       M-Right           resize-pane -R
 
 # TMUX status bar
 set -g status-position bottom
 set -g @catppuccin_status_modules_right "none"
+
+# Config
+setw -g mode-keys vi                    # vi keys to navigate panes
+set -g renumber-windows on              # renumber all windows when any window is closed
+set -g history-limit 1000000            # increase history size (from 2,000)
+set-option -g detach-on-destroy off     # Don't detach on destroy
+# No way fuck this, I want my scrollwheel and to copy with mouse.
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g mouse on
+set -g @yank_selection_mouse 'clipboard'
