--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,8 +27,12 @@ set -g default-terminal "xterm-256color"
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
+bind-key -r b break-pane -d                                         # Break pane to new window
+
 bind-key -r m resize-pane -Z                                        # Maximize And Minimize Panes
 set-option -g repeat-time 0                                         # Repeat time where we can chain commands... I don't like this outside of mass resizing...
+
+# Resize panes
 bind-key -r -T prefix       C-Up              resize-pane -U 10
 bind-key -r -T prefix       C-Down            resize-pane -D 10
 bind-key -r -T prefix       C-Left            resize-pane -L 10
