--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,8 +20,8 @@ run '~/.tmux/plugins/tpm/tpm'
 # see https://github.com/tmux/tmux/issues/696
 # see https://stackoverflow.com/a/41786092
 # MAKE SURE IT's AFTER tmux-sensible, cause theirs isn't so sensible
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Remaps
 # I need these to be working outside of nvim, so add them here
