--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,12 +1,3 @@
-
-[terminal.shell]
-program = "/bin/zsh"
-args = ["-l"]
-
-[env]
-TERM = "xterm-256color"
-
-[general]
 import = [
   # "~/.config/alacritty/catppuccin-latte.toml"
   # "~/.config/alacritty/catppuccin-frappe.toml"
@@ -16,3 +7,10 @@ import = [
   "~/.config/alacritty/catppuccin-mocha.toml",
 ]
 
+
+[shell]
+program = "/bin/zsh"
+args = ["-l"]
+
+[env]
+TERM = "xterm-256color"
