fix: Lower history limit
- I believe the high history limit was causing OOM

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,7 +50,7 @@ set -g @catppuccin_status_modules_right "none"
 # Config
 setw -g mode-keys vi                    # vi keys to navigate panes
 set -g renumber-windows on              # renumber all windows when any window is closed
-set -g history-limit 1000000            # increase history size (from 2,000)
+set -g history-limit 10000            # increase history size (from 2,000)
 set-option -g detach-on-destroy off     # Don't detach on destroy
 # No way fuck this, I want my scrollwheel and to copy with mouse.
 set -g @plugin 'tmux-plugins/tmux-yank'
