--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,3 +1,11 @@
+[terminal.shell]
+program = "/bin/zsh"
+args = ["-l"]
+
+[env]
+TERM = "xterm-256color"
+
+[general]
 import = [
   # "~/.config/alacritty/catppuccin-latte.toml"
   # "~/.config/alacritty/catppuccin-frappe.toml"
@@ -7,10 +15,4 @@ import = [
   "~/.config/alacritty/catppuccin-mocha.toml",
 ]
 
-
-[shell]
-program = "/bin/zsh"
-args = ["-l"]
-
-[env]
-TERM = "xterm-256color"
+[terminal]
