feat(aerospace): alt+enter to create a new terminal

--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -88,14 +88,7 @@ automatically-unhide-macos-hidden-apps = false
     # All possible commands: https://nikitabobko.github.io/AeroSpace/commands
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#exec-and-forget
-    # You can uncomment the following lines to open up terminal with alt + enter shortcut
-    # (like in i3)
-    # alt-enter = '''exec-and-forget osascript -e '
-    # tell application "Terminal"
-    #     do script
-    #     activate
-    # end tell'
-    # '''
+    alt-enter = 'exec-and-forget open -n /Applications/Alacritty.app'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#layout
     alt-slash = 'layout tiles horizontal vertical'
@@ -209,4 +202,5 @@ automatically-unhide-macos-hidden-apps = false
 
     down = 'volume down'
     up = 'volume up'
+    shift-up = ['volume set 100', 'mode main']
     shift-down = ['volume set 0', 'mode main']
