fix(aerospace): removed `hjkl` remaps They are used in neovim

--- a/aerospace/.aerospace.toml
+++ b/aerospace/.aerospace.toml
@@ -95,10 +95,11 @@ automatically-unhide-macos-hidden-apps = true
     alt-comma = 'layout accordion horizontal vertical'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
-    alt-h = 'focus left'
-    alt-j = 'focus down'
-    alt-k = 'focus up'
-    alt-l = 'focus right'
+    # disabled since I use this in nvim
+    # alt-h = 'focus left'
+    # alt-j = 'focus down'
+    # alt-k = 'focus up'
+    # alt-l = 'focus right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#focus
     alt-left = 'focus left'
