feat(hyprland): Set login workspaces

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -37,10 +37,11 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal
-exec-once = brave
+exec-once = [workspace 1 silent] brave
+exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 3 silent] obsidian
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & firefox
+# exec-once = waybar & hyprpaper & firefox
 
 
 #############################
