feat: Exec waybar

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -41,9 +41,7 @@ $browser = brave
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 3 silent] obsidian
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
+exec-once = waybar 
 
 #############################
 ### ENVIRONMENT VARIABLES ###
