feat: Configuring wallapapers and locking and idle

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,9 +1,10 @@
-preload = /path/to/image.png
+preload = ~/.config/wallappers/1.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 # preload = /path/to/next_image.png
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = monitor1,/path/to/image.png
+
+wallpaper = , ~/.config/wallappers/1.jpg
 
 #enable splash text rendering over the wallpaper
 splash = true
