feat: Added more wallpapers

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $browser = brave
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 3 silent] obsidian
-exec-once = waybar & hypridle
+exec-once = waybar & hypridle & hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
