feat: theming courtesy of typecraft

--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -1,38 +1,66 @@
+source = $HOME/.config/hypr/mocha.conf
+
+$accent = $mauve
+$accentAlpha = $mauveAlpha
+$font = JetBrainsMono Nerd Font
+
+# GENERAL
+general {
+    # disable_loading_bar = true
+    hide_cursor = true
+}
+
 background {
     monitor =
     path = screenshot
-    color = rgba(25, 20, 20, 1.0)
-    blur_passes = 4
+    color = $base
+    blur_passes = 2
 }
 
-input-field {
-    size = 20%, 5%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
-
-    placeholder_text = Unlock Me
-
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color=rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color=rgba(ff6633ee) rgba(ff0066ee) 40deg
-
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = false
-    rounding = 15
-
-    position = 0, -20
-    halign = center
-    valign = center
-}
-
+# TIME
 label {
     monitor =
-    text = Hi there, $USER
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 25
-    font_family = Noto Sans
+    text = cmd[update:30000] echo "$(date +"%R")"
+    color = $text
+    font_size = 90
+    font_family = $font
+    position = -30, 0
+    halign = right
+    valign = top
+}
 
-    position = 0, 80
+# DATE 
+label {
+    monitor = 
+    text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
+    color = $text
+    font_size = 25
+    font_family = $font
+    position = -30, -150
+    halign = right
+    valign = top
+}
+
+
+# INPUT FIELD
+input-field {
+    monitor =
+    size = 300, 60
+    outline_thickness = 4
+    dots_size = 0.2
+    dots_spacing = 0.2
+    dots_center = true
+    outer_color = $accent
+    inner_color = $surface0
+    font_color = $text
+    fade_on_empty = false
+    placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+    hide_input = false
+    check_color = $accent
+    fail_color = $red
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    capslock_color = $yellow
+    position = 0, -35
     halign = center
     valign = center
 }
