--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
-preload = ~/.config/wallappers/1.jpg
+preload = ~/wallappers/3.png
 #if more than one preload is desired then continue to preload other backgrounds
 # preload = /path/to/next_image.png
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
 
-wallpaper = , ~/.config/wallappers/1.jpg
+wallpaper = , ~/wallappers/3.png
 
 #enable splash text rendering over the wallpaper
 splash = true
