--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -208,12 +208,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, Escape, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,
+bind = $mainMod, M, fullscreen, 1
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
