feat(waypaper): Add waypaper, trigger by clicking on arch logo

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -7,7 +7,7 @@
 
   "custom/logo": {
     "format": "",
-    "tooltip": false
+    "on-click-right": "waypaper"
   },
 
   "hyprland/workspaces": {
