--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/wallappers
 monitors = All
-wallpaper = ~/wallappers/3.png
+wallpaper = ~/wallappers/car-with-full-moon-background.jpg
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
