feat: Alacritty opacity on window (not working on nvim)

--- a/alacritty/.config/alacritty/window.toml
+++ b/alacritty/.config/alacritty/window.toml
@@ -1,9 +1,10 @@
 # MacOs ...
 [window]
 dynamic_padding = true
+opacity = 0.9
 
 # Idk how I feel about this, but it's a thing
 startup_mode = "Maximized"
 decorations = "Full"
 
-option_as_alt = "Both"  
+option_as_alt = "Both"
