feat(hyprland): Key repeat delay set

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -182,6 +182,10 @@ input {
     touchpad {
         natural_scroll = false
     }
+
+    # keyboard reeat delay
+    repeat_delay = 200
+    repeat_rate = 50
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
