feat: removed wallpapers, will move to separate repo

--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -1,14 +1,15 @@
 [Settings]
 language = en
-folder = ~/wallappers
+folder = ~/Wallpaper-Bank
+	     ~/wallappers
 monitors = All
-wallpaper = ~/wallappers/car-with-full-moon-background.jpg
+wallpaper = ~/Wallpaper-Bank/wallpapers/Red_Eclipse.png
 show_path_in_tooltip = True
 backend = hyprpaper
 fill = fill
 sort = name
 color = #ffffff
-subfolders = False
+subfolders = True
 all_subfolders = False
 show_hidden = False
 show_gifs_only = False
