feat!: Moved from hyprpaper to swww

--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -1,11 +1,10 @@
 [Settings]
 language = en
-folder = ~/Wallpaper-Bank
-	     ~/wallappers
+folder = ~/Wallpapers
 monitors = All
-wallpaper = ~/Wallpaper-Bank/wallpapers/Red_Eclipse.png
+wallpaper = ~/Wallpapers/wallpapers/Anime-City-Night.png
 show_path_in_tooltip = True
-backend = hyprpaper
+backend = swww
 fill = fill
 sort = name
 color = #ffffff
