feat: better organziation of arch install

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -41,7 +41,9 @@ $browser = brave
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 3 silent] obsidian
-exec-once = waybar & hypridle & hyprpaper
+exec-once = waybar & hypridle
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -169,10 +171,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,bg
+    kb_variant = qwerty,
+    kb_options = grp:alt_shift_toggle
     kb_model =
-    kb_options =
     kb_rules =
 
     follow_mouse = 1
