--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -172,8 +172,8 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us,bg
-    kb_variant = qwerty,
-    kb_options = grp:alt_shift_toggle
+    kb_variant = ,phonetic
+    kb_options = grp:alt_space_toggle
     kb_model =
     kb_rules =
 
